# MeteoScope

./: README.md  app.py  index.html  login.html  main.py  pyproject.toml  script.js  signup.html  supabase_client.py
app/: __init__.py
app/core/: config.py
app/supabase/: supabase_client.py
app/templates/: create_event.html  create_team.html  dashboard.html  login.html  pref.html  prefer.html  signup.html
app/templates/events/: create_event.html
app/templates/home/: land.html
app/views/auth/: user_auth.py
app/views/home/: land.py
app/views/user/: event.py  tasks.py  team.py  user_acc.py
templates/: dashboard.html
