[project]
name = "meteoscope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "netcdf4>=1.7.2",
    "pydantic-settings>=2.11.0",
    "pydap>=3.5.8",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "supabase>=2.21.1",
    "xarray>=2025.9.1",
]
